--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
 		}
 	],
 	"require": {
-		"php": ">=5.3.0"
+		"php": ">=5.3.0",
+		"robclancy/db-connector": "1.0.*",
+		"robclancy/schema-builder": "1.0.*"
 	},
 	"require-dev": {
 		 "mockery/mockery": "0.7.2"
